--- a/frontend/testdrive/src/Pages/Cadastrar/style.css
+++ b/frontend/testdrive/src/Pages/Cadastrar/style.css
@@ -5,7 +5,7 @@
 }
 
 .Container2{
-    background-color: gray;
+    
     width: 100%;
     height: 55vh;
     align-items: center;
@@ -14,5 +14,15 @@
 }
 
 .button{
-   color: black;
+   margin-top: 70px;
+   margin-left: 280px;
+}
+
+.Carross{
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.Data, .Hora{
+    margin: 10px;    
 }
